resolve collect(Collectors.toList()) issues